--- a/test-output/old/Suite/classes.html
+++ b/test-output/old/Suite/classes.html
@@ -11,7 +11,7 @@
 </tr>
 <tr>
 <td>&nbsp;</td>
-<td>lg_001_verifyLogin</td>
+<td>verifyLogin_Tc_001</td>
 <td>regression,sanity,smoke </td>
 </tr>
 <tr>
@@ -42,13 +42,23 @@
 </tr>
 <tr>
 <td>&nbsp;</td>
-<td>ST1_002_verifyPopupAddSpac</td>
+<td>multipleUsersWithMutlipleSelections_TC_203</td>
 <td>regression </td>
 </tr>
 <tr>
 <td>&nbsp;</td>
-<td>ST1_001_verifySpacePage</td>
+<td>verifySpacePage_Tc_201</td>
 <td>regression,sanity,smoke </td>
+</tr>
+<tr>
+<td>&nbsp;</td>
+<td>verifySpaceFromTableAfterAdd_TC_205</td>
+<td>regression,smoke </td>
+</tr>
+<tr>
+<td>&nbsp;</td>
+<td>verifyPopupAddSpace_TC_202</td>
+<td>regression,smoke </td>
 </tr>
 <tr>
 <td align='center' colspan='3'>@BeforeClass</td>
