--- a/test-output/old/Suite/groups.html
+++ b/test-output/old/Suite/groups.html
@@ -1,4 +1,5 @@
 <h2>Groups used for this test run</h2><table border="1">
-<tr> <td align="center"><b>Group name</b></td><td align="center"><b>Methods</b></td></tr><tr><td>regression</td><td>Mod_2_SpaceTypes.ST1_002_verifyPopupAddSpac()[pri:0, instance:com.marina.tests.Mod_2_SpaceTypes@3f6b0be5]<br/></td></tr>
-<tr><td>regression,sanity,smoke</td><td>Mod_2_SpaceTypes.ST1_001_verifySpacePage()[pri:0, instance:com.marina.tests.Mod_2_SpaceTypes@3f6b0be5]<br/>Mod_1_login.lg_001_verifyLogin()[pri:0, instance:com.marina.tests.Mod_1_login@3b6ddd1d]<br/></td></tr>
+<tr> <td align="center"><b>Group name</b></td><td align="center"><b>Methods</b></td></tr><tr><td>regression</td><td>Mod_2_SpaceTypes.multipleUsersWithMutlipleSelections_TC_203()[pri:4, instance:com.marina.tests.Mod_2_SpaceTypes@48f278eb]<br/></td></tr>
+<tr><td>regression,sanity,smoke</td><td>Mod_2_SpaceTypes.verifySpacePage_Tc_201()[pri:1, instance:com.marina.tests.Mod_2_SpaceTypes@48f278eb]<br/>Mod_1_login.verifyLogin_Tc_001()[pri:1, instance:com.marina.tests.Mod_1_login@1da2cb77]<br/></td></tr>
+<tr><td>regression,smoke</td><td>Mod_2_SpaceTypes.verifySpaceFromTableAfterAdd_TC_205()[pri:5, instance:com.marina.tests.Mod_2_SpaceTypes@48f278eb]<br/>Mod_2_SpaceTypes.verifyPopupAddSpace_TC_202()[pri:2, instance:com.marina.tests.Mod_2_SpaceTypes@48f278eb]<br/></td></tr>
 </table>
