--- a/test-output/old/Suite/methods.html
+++ b/test-output/old/Suite/methods.html
@@ -1,26 +1,38 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="a7c7e0">  <td>23/10/25 07:11:50</td>   <td>0</td> <td title="&gt;&gt;TestBase.loadConfig()[pri:0, instance:com.marina.tests.Mod_1_login@3b6ddd1d]">&gt;&gt;loadConfig</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1325056130</td>   <td></td> </tr>
-<tr bgcolor="fa7c99">  <td>23/10/25 07:11:51</td>   <td>499</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;Mod_2_SpaceTypes.beforeTest()[pri:0, instance:com.marina.tests.Mod_2_SpaceTypes@3f6b0be5]">&gt;&gt;beforeTest</td> 
-<td>&nbsp;</td>  <td>TestNG-test=test-2@1763584734</td>   <td></td> </tr>
-<tr bgcolor="c288aa">  <td>23/10/25 07:11:51</td>   <td>499</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;Mod_1_login.beforeTest()[pri:0, instance:com.marina.tests.Mod_1_login@3b6ddd1d]">&gt;&gt;beforeTest</td> 
-<td>&nbsp;</td>  <td>TestNG-test=test-1@1300385317</td>   <td></td> </tr>
-<tr bgcolor="c288aa">  <td>23/10/25 07:12:09</td>   <td>19022</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Mod_1_login.lg_001_verifyLogin()[pri:0, instance:com.marina.tests.Mod_1_login@3b6ddd1d]">lg_001_verifyLogin</td> 
-  <td>TestNG-test=test-1@1300385317</td>   <td></td> </tr>
-<tr bgcolor="c288aa">  <td>23/10/25 07:12:24</td>   <td>34000</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;Mod_1_login.afterTest()[pri:0, instance:com.marina.tests.Mod_1_login@3b6ddd1d]">&lt;&lt;afterTest</td> 
-<td>&nbsp;</td>  <td>TestNG-test=test-1@1300385317</td>   <td></td> </tr>
-<tr bgcolor="fa7c99">  <td>23/10/25 07:12:25</td>   <td>34286</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Mod_2_SpaceTypes.ST1_001_verifySpacePage()[pri:0, instance:com.marina.tests.Mod_2_SpaceTypes@3f6b0be5]">ST1_001_verifySpacePage</td> 
-  <td>TestNG-test=test-2@1763584734</td>   <td></td> </tr>
-<tr bgcolor="fa7c99">  <td>23/10/25 07:12:25</td>   <td>34453</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;Mod_2_SpaceTypes.afterTest()[pri:0, instance:com.marina.tests.Mod_2_SpaceTypes@3f6b0be5]">&lt;&lt;afterTest</td> 
-<td>&nbsp;</td>  <td>TestNG-test=test-2@1763584734</td>   <td></td> </tr>
-<tr bgcolor="fa7c99">  <td>23/10/25 07:12:32</td>   <td>42089</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;Mod_2_SpaceTypes.beforeTest()[pri:0, instance:com.marina.tests.Mod_2_SpaceTypes@3f6b0be5]">&gt;&gt;beforeTest</td> 
-<td>&nbsp;</td>  <td>TestNG-test=test-2@1763584734</td>   <td></td> </tr>
-<tr bgcolor="fa7c99">  <td>23/10/25 07:12:55</td>   <td>64998</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Mod_2_SpaceTypes.ST1_002_verifyPopupAddSpac()[pri:0, instance:com.marina.tests.Mod_2_SpaceTypes@3f6b0be5]">ST1_002_verifyPopupAddSpac</td> 
-  <td>TestNG-test=test-2@1763584734</td>   <td></td> </tr>
-<tr bgcolor="fa7c99">  <td>23/10/25 07:12:56</td>   <td>66080</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;Mod_2_SpaceTypes.afterTest()[pri:0, instance:com.marina.tests.Mod_2_SpaceTypes@3f6b0be5]">&lt;&lt;afterTest</td> 
-<td>&nbsp;</td>  <td>TestNG-test=test-2@1763584734</td>   <td></td> </tr>
-<tr bgcolor="a7c7e0">  <td>23/10/25 07:12:59</td>   <td>68963</td> <td title="&lt;&lt;TestBase.afterSuite()[pri:0, instance:com.marina.tests.Mod_1_login@3b6ddd1d]">&lt;&lt;afterSuite</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1325056130</td>   <td></td> </tr>
+<tr bgcolor="a7c7e0">  <td>23/10/31 00:05:11</td>   <td>0</td> <td title="&gt;&gt;TestBase.loadConfig()[pri:0, instance:com.marina.tests.Mod_1_login@1da2cb77]">&gt;&gt;loadConfig</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@335359181</td>   <td></td> </tr>
+<tr bgcolor="c288aa">  <td>23/10/31 00:05:12</td>   <td>515</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;Mod_1_login.beforeTest()[pri:0, instance:com.marina.tests.Mod_1_login@1da2cb77]">&gt;&gt;beforeTest</td> 
+<td>&nbsp;</td>  <td>TestNG-test=test-1@455709334</td>   <td></td> </tr>
+<tr bgcolor="fa7c99">  <td>23/10/31 00:05:12</td>   <td>520</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;Mod_2_SpaceTypes.beforeTest()[pri:0, instance:com.marina.tests.Mod_2_SpaceTypes@48f278eb]">&gt;&gt;beforeTest</td> 
+<td>&nbsp;</td>  <td>TestNG-test=test-2@2069390685</td>   <td></td> </tr>
+<tr bgcolor="c288aa">  <td>23/10/31 00:05:47</td>   <td>36028</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Mod_1_login.verifyLogin_Tc_001()[pri:1, instance:com.marina.tests.Mod_1_login@1da2cb77]">verifyLogin_Tc_001</td> 
+  <td>TestNG-test=test-1@455709334</td>   <td></td> </tr>
+<tr bgcolor="fa7c99">  <td>23/10/31 00:05:55</td>   <td>43953</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Mod_2_SpaceTypes.verifySpacePage_Tc_201()[pri:1, instance:com.marina.tests.Mod_2_SpaceTypes@48f278eb]">verifySpacePage_Tc_201</td> 
+  <td>TestNG-test=test-2@2069390685</td>   <td></td> </tr>
+<tr bgcolor="fa7c99">  <td>23/10/31 00:05:56</td>   <td>45196</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;Mod_2_SpaceTypes.afterTest()[pri:0, instance:com.marina.tests.Mod_2_SpaceTypes@48f278eb]">&lt;&lt;afterTest</td> 
+<td>&nbsp;</td>  <td>TestNG-test=test-2@2069390685</td>   <td></td> </tr>
+<tr bgcolor="c288aa">  <td>23/10/31 00:05:57</td>   <td>46019</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;Mod_1_login.afterTest()[pri:0, instance:com.marina.tests.Mod_1_login@1da2cb77]">&lt;&lt;afterTest</td> 
+<td>&nbsp;</td>  <td>TestNG-test=test-1@455709334</td>   <td></td> </tr>
+<tr bgcolor="fa7c99">  <td>23/10/31 00:06:03</td>   <td>51817</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;Mod_2_SpaceTypes.beforeTest()[pri:0, instance:com.marina.tests.Mod_2_SpaceTypes@48f278eb]">&gt;&gt;beforeTest</td> 
+<td>&nbsp;</td>  <td>TestNG-test=test-2@2069390685</td>   <td></td> </tr>
+<tr bgcolor="fa7c99">  <td>23/10/31 00:06:35</td>   <td>84041</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Mod_2_SpaceTypes.verifyPopupAddSpace_TC_202()[pri:2, instance:com.marina.tests.Mod_2_SpaceTypes@48f278eb]">verifyPopupAddSpace_TC_202</td> 
+  <td>TestNG-test=test-2@2069390685</td>   <td></td> </tr>
+<tr bgcolor="fa7c99">  <td>23/10/31 00:06:36</td>   <td>85102</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;Mod_2_SpaceTypes.afterTest()[pri:0, instance:com.marina.tests.Mod_2_SpaceTypes@48f278eb]">&lt;&lt;afterTest</td> 
+<td>&nbsp;</td>  <td>TestNG-test=test-2@2069390685</td>   <td></td> </tr>
+<tr bgcolor="fa7c99">  <td>23/10/31 00:06:39</td>   <td>87966</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;Mod_2_SpaceTypes.beforeTest()[pri:0, instance:com.marina.tests.Mod_2_SpaceTypes@48f278eb]">&gt;&gt;beforeTest</td> 
+<td>&nbsp;</td>  <td>TestNG-test=test-2@2069390685</td>   <td></td> </tr>
+<tr bgcolor="fa7c99">  <td>23/10/31 00:07:21</td>   <td>130368</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Mod_2_SpaceTypes.multipleUsersWithMutlipleSelections_TC_203()[pri:4, instance:com.marina.tests.Mod_2_SpaceTypes@48f278eb]">multipleUsersWithMutlipleSelections_TC_203</td> 
+  <td>TestNG-test=test-2@2069390685</td>   <td></td> </tr>
+<tr bgcolor="fa7c99">  <td>23/10/31 00:07:22</td>   <td>131221</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;Mod_2_SpaceTypes.afterTest()[pri:0, instance:com.marina.tests.Mod_2_SpaceTypes@48f278eb]">&lt;&lt;afterTest</td> 
+<td>&nbsp;</td>  <td>TestNG-test=test-2@2069390685</td>   <td></td> </tr>
+<tr bgcolor="fa7c99">  <td>23/10/31 00:07:26</td>   <td>135223</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;Mod_2_SpaceTypes.beforeTest()[pri:0, instance:com.marina.tests.Mod_2_SpaceTypes@48f278eb]">&gt;&gt;beforeTest</td> 
+<td>&nbsp;</td>  <td>TestNG-test=test-2@2069390685</td>   <td></td> </tr>
+<tr bgcolor="fa7c99">  <td>23/10/31 00:09:20</td>   <td>249262</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Mod_2_SpaceTypes.verifySpaceFromTableAfterAdd_TC_205()[pri:5, instance:com.marina.tests.Mod_2_SpaceTypes@48f278eb]">verifySpaceFromTableAfterAdd_TC_205</td> 
+  <td>TestNG-test=test-2@2069390685</td>   <td></td> </tr>
+<tr bgcolor="fa7c99">  <td>23/10/31 00:09:41</td>   <td>269996</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;Mod_2_SpaceTypes.afterTest()[pri:0, instance:com.marina.tests.Mod_2_SpaceTypes@48f278eb]">&lt;&lt;afterTest</td> 
+<td>&nbsp;</td>  <td>TestNG-test=test-2@2069390685</td>   <td></td> </tr>
+<tr bgcolor="a7c7e0">  <td>23/10/31 00:09:44</td>   <td>272514</td> <td title="&lt;&lt;TestBase.afterSuite()[pri:0, instance:com.marina.tests.Mod_1_login@1da2cb77]">&lt;&lt;afterSuite</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@335359181</td>   <td></td> </tr>
 </table>
