Space Group Module Completed

--- a/test-output/old/Default suite/classes.html
+++ b/test-output/old/Default suite/classes.html
@@ -4,14 +4,14 @@
 <th>Method name</th>
 <th>Groups</th>
 </tr><tr>
-<td>com.marina.tests.Mod_4_Calendar</td>
+<td>com.marina.tests.Mod_6_BoatGroup</td>
 <td>&nbsp;</td><td>&nbsp;</td></tr>
 <tr>
 <td align='center' colspan='3'>@Test</td>
 </tr>
 <tr>
 <td>&nbsp;</td>
-<td>verifyDetailsSlipDetailPage_TC_603</td>
+<td>verifyBoatGroupPageOpens_TC_1001</td>
 <td>&nbsp;</td></tr>
 <tr>
 <td align='center' colspan='3'>@BeforeClass</td>
@@ -21,15 +21,11 @@
 </tr>
 <tr>
 <td>&nbsp;</td>
-<td>beforeTest</td>
+<td>beforeMethod</td>
 <td>&nbsp;</td></tr>
 <tr>
 <td align='center' colspan='3'>@AfterMethod</td>
 </tr>
-<tr>
-<td>&nbsp;</td>
-<td>afterTest</td>
-<td>&nbsp;</td></tr>
 <tr>
 <td align='center' colspan='3'>@AfterClass</td>
 </tr>
