Completed Boat Group Testcases

--- a/test-output/old/Default suite/methods.html
+++ b/test-output/old/Default suite/methods.html
@@ -1,12 +1,74 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Default suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="a5f880">  <td>23/11/03 13:46:53</td>   <td>0</td> <td title="&gt;&gt;TestBase.loadConfig()[pri:0, instance:com.marina.tests.Mod_6_BoatGroup@1060b431]">&gt;&gt;loadConfig</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@897074030</td>   <td></td> </tr>
-<tr bgcolor="faf8f2">  <td>23/11/03 13:46:53</td>   <td>226</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;Mod_6_BoatGroup.beforeMethod()[pri:0, instance:com.marina.tests.Mod_6_BoatGroup@1060b431]">&gt;&gt;beforeMethod</td> 
-<td>&nbsp;</td>  <td>main@897074030</td>   <td></td> </tr>
-<tr bgcolor="faf8f2">  <td>23/11/03 13:47:55</td>   <td>62841</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Mod_6_BoatGroup.verifyBoatGroupPageOpens_TC_1001()[pri:0, instance:com.marina.tests.Mod_6_BoatGroup@1060b431]">verifyBoatGroupPageOpens_TC_1001</td> 
-  <td>main@897074030</td>   <td></td> </tr>
-<tr bgcolor="a5f880">  <td>23/11/03 13:47:55</td>   <td>62908</td> <td title="&lt;&lt;TestBase.afterSuite()[pri:0, instance:com.marina.tests.Mod_6_BoatGroup@1060b431]">&lt;&lt;afterSuite</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@897074030</td>   <td></td> </tr>
+<tr bgcolor="a5f880">  <td>23/11/06 15:53:13</td>   <td>0</td> <td title="&gt;&gt;TestBase.loadConfig()[pri:0, instance:com.marina.tests.Mod_6_BoatGroup@491cc5c9]">&gt;&gt;loadConfig</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1684015092</td>   <td></td> </tr>
+<tr bgcolor="faf8f2">  <td>23/11/06 15:53:14</td>   <td>237</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;Mod_6_BoatGroup.beforeMethod()[pri:0, instance:com.marina.tests.Mod_6_BoatGroup@491cc5c9]">&gt;&gt;beforeMethod</td> 
+<td>&nbsp;</td>  <td>main@1684015092</td>   <td></td> </tr>
+<tr bgcolor="faf8f2">  <td>23/11/06 15:53:39</td>   <td>25709</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Mod_6_BoatGroup.verifyBoatGroupPageOpens_TC_1001()[pri:1, instance:com.marina.tests.Mod_6_BoatGroup@491cc5c9]">verifyBoatGroupPageOpens_TC_1001</td> 
+  <td>main@1684015092</td>   <td></td> </tr>
+<tr bgcolor="faf8f2">  <td>23/11/06 15:53:39</td>   <td>25767</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;Mod_6_BoatGroup.afterMethod()[pri:0, instance:com.marina.tests.Mod_6_BoatGroup@491cc5c9]">&lt;&lt;afterMethod</td> 
+<td>&nbsp;</td>  <td>main@1684015092</td>   <td></td> </tr>
+<tr bgcolor="faf8f2">  <td>23/11/06 15:53:42</td>   <td>28215</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;Mod_6_BoatGroup.beforeMethod()[pri:0, instance:com.marina.tests.Mod_6_BoatGroup@491cc5c9]">&gt;&gt;beforeMethod</td> 
+<td>&nbsp;</td>  <td>main@1684015092</td>   <td></td> </tr>
+<tr bgcolor="faf8f2">  <td>23/11/06 15:54:11</td>   <td>57417</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Mod_6_BoatGroup.addBoatGroupMandatoryFields_TC_1002()[pri:2, instance:com.marina.tests.Mod_6_BoatGroup@491cc5c9]">addBoatGroupMandatoryFields_TC_1002</td> 
+  <td>main@1684015092</td>   <td></td> </tr>
+<tr bgcolor="faf8f2">  <td>23/11/06 15:54:15</td>   <td>61761</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;Mod_6_BoatGroup.afterMethod()[pri:0, instance:com.marina.tests.Mod_6_BoatGroup@491cc5c9]">&lt;&lt;afterMethod</td> 
+<td>&nbsp;</td>  <td>main@1684015092</td>   <td></td> </tr>
+<tr bgcolor="faf8f2">  <td>23/11/06 15:54:18</td>   <td>64345</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;Mod_6_BoatGroup.beforeMethod()[pri:0, instance:com.marina.tests.Mod_6_BoatGroup@491cc5c9]">&gt;&gt;beforeMethod</td> 
+<td>&nbsp;</td>  <td>main@1684015092</td>   <td></td> </tr>
+<tr bgcolor="faf8f2">  <td>23/11/06 15:54:41</td>   <td>87057</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Mod_6_BoatGroup.addBoatGroupAllFields_TC_1003()[pri:3, instance:com.marina.tests.Mod_6_BoatGroup@491cc5c9]">addBoatGroupAllFields_TC_1003</td> 
+  <td>main@1684015092</td>   <td></td> </tr>
+<tr bgcolor="faf8f2">  <td>23/11/06 15:54:46</td>   <td>92144</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;Mod_6_BoatGroup.afterMethod()[pri:0, instance:com.marina.tests.Mod_6_BoatGroup@491cc5c9]">&lt;&lt;afterMethod</td> 
+<td>&nbsp;</td>  <td>main@1684015092</td>   <td></td> </tr>
+<tr bgcolor="faf8f2">  <td>23/11/06 15:54:48</td>   <td>94488</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;Mod_6_BoatGroup.beforeMethod()[pri:0, instance:com.marina.tests.Mod_6_BoatGroup@491cc5c9]">&gt;&gt;beforeMethod</td> 
+<td>&nbsp;</td>  <td>main@1684015092</td>   <td></td> </tr>
+<tr bgcolor="faf8f2">  <td>23/11/06 15:55:14</td>   <td>120669</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Mod_6_BoatGroup.searchBoatGroup_TC_1004()[pri:4, instance:com.marina.tests.Mod_6_BoatGroup@491cc5c9]">searchBoatGroup_TC_1004</td> 
+  <td>main@1684015092</td>   <td></td> </tr>
+<tr bgcolor="faf8f2">  <td>23/11/06 15:55:16</td>   <td>122073</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;Mod_6_BoatGroup.afterMethod()[pri:0, instance:com.marina.tests.Mod_6_BoatGroup@491cc5c9]">&lt;&lt;afterMethod</td> 
+<td>&nbsp;</td>  <td>main@1684015092</td>   <td></td> </tr>
+<tr bgcolor="faf8f2">  <td>23/11/06 15:55:18</td>   <td>124276</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;Mod_6_BoatGroup.beforeMethod()[pri:0, instance:com.marina.tests.Mod_6_BoatGroup@491cc5c9]">&gt;&gt;beforeMethod</td> 
+<td>&nbsp;</td>  <td>main@1684015092</td>   <td></td> </tr>
+<tr bgcolor="faf8f2">  <td>23/11/06 15:55:41</td>   <td>147738</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Mod_6_BoatGroup.viewSavedDataBoatGroup_TC_1005()[pri:5, instance:com.marina.tests.Mod_6_BoatGroup@491cc5c9]">viewSavedDataBoatGroup_TC_1005</td> 
+  <td>main@1684015092</td>   <td></td> </tr>
+<tr bgcolor="faf8f2">  <td>23/11/06 15:55:44</td>   <td>150764</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;Mod_6_BoatGroup.afterMethod()[pri:0, instance:com.marina.tests.Mod_6_BoatGroup@491cc5c9]">&lt;&lt;afterMethod</td> 
+<td>&nbsp;</td>  <td>main@1684015092</td>   <td></td> </tr>
+<tr bgcolor="faf8f2">  <td>23/11/06 15:55:47</td>   <td>153184</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;Mod_6_BoatGroup.beforeMethod()[pri:0, instance:com.marina.tests.Mod_6_BoatGroup@491cc5c9]">&gt;&gt;beforeMethod</td> 
+<td>&nbsp;</td>  <td>main@1684015092</td>   <td></td> </tr>
+<tr bgcolor="faf8f2">  <td>23/11/06 15:56:11</td>   <td>177707</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Mod_6_BoatGroup.viewPageNewBoatAdd_TC_1006()[pri:6, instance:com.marina.tests.Mod_6_BoatGroup@491cc5c9]">viewPageNewBoatAdd_TC_1006</td> 
+  <td>main@1684015092</td>   <td></td> </tr>
+<tr bgcolor="faf8f2">  <td>23/11/06 15:56:20</td>   <td>187036</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;Mod_6_BoatGroup.afterMethod()[pri:0, instance:com.marina.tests.Mod_6_BoatGroup@491cc5c9]">&lt;&lt;afterMethod</td> 
+<td>&nbsp;</td>  <td>main@1684015092</td>   <td></td> </tr>
+<tr bgcolor="faf8f2">  <td>23/11/06 15:56:23</td>   <td>189383</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;Mod_6_BoatGroup.beforeMethod()[pri:0, instance:com.marina.tests.Mod_6_BoatGroup@491cc5c9]">&gt;&gt;beforeMethod</td> 
+<td>&nbsp;</td>  <td>main@1684015092</td>   <td></td> </tr>
+<tr bgcolor="faf8f2">  <td>23/11/06 15:56:47</td>   <td>213817</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Mod_6_BoatGroup.addBoatMainPage_TC_1007()[pri:7, instance:com.marina.tests.Mod_6_BoatGroup@491cc5c9]">addBoatMainPage_TC_1007</td> 
+  <td>main@1684015092</td>   <td></td> </tr>
+<tr bgcolor="faf8f2">  <td>23/11/06 15:56:53</td>   <td>219645</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;Mod_6_BoatGroup.afterMethod()[pri:0, instance:com.marina.tests.Mod_6_BoatGroup@491cc5c9]">&lt;&lt;afterMethod</td> 
+<td>&nbsp;</td>  <td>main@1684015092</td>   <td></td> </tr>
+<tr bgcolor="faf8f2">  <td>23/11/06 15:56:55</td>   <td>221877</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;Mod_6_BoatGroup.beforeMethod()[pri:0, instance:com.marina.tests.Mod_6_BoatGroup@491cc5c9]">&gt;&gt;beforeMethod</td> 
+<td>&nbsp;</td>  <td>main@1684015092</td>   <td></td> </tr>
+<tr bgcolor="faf8f2">  <td>23/11/06 15:57:23</td>   <td>249370</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Mod_6_BoatGroup.editBoatGroupVerifyData_TC_1008()[pri:8, instance:com.marina.tests.Mod_6_BoatGroup@491cc5c9]">editBoatGroupVerifyData_TC_1008</td> 
+  <td>main@1684015092</td>   <td></td> </tr>
+<tr bgcolor="faf8f2">  <td>23/11/06 15:57:37</td>   <td>263858</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;Mod_6_BoatGroup.afterMethod()[pri:0, instance:com.marina.tests.Mod_6_BoatGroup@491cc5c9]">&lt;&lt;afterMethod</td> 
+<td>&nbsp;</td>  <td>main@1684015092</td>   <td></td> </tr>
+<tr bgcolor="faf8f2">  <td>23/11/06 15:57:40</td>   <td>266678</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;Mod_6_BoatGroup.beforeMethod()[pri:0, instance:com.marina.tests.Mod_6_BoatGroup@491cc5c9]">&gt;&gt;beforeMethod</td> 
+<td>&nbsp;</td>  <td>main@1684015092</td>   <td></td> </tr>
+<tr bgcolor="faf8f2">  <td>23/11/06 15:58:17</td>   <td>303074</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Mod_6_BoatGroup.generatingMultipleAddRequest_TC_1009()[pri:9, instance:com.marina.tests.Mod_6_BoatGroup@491cc5c9]">generatingMultipleAddRequest_TC_1009</td> 
+  <td>main@1684015092</td>   <td></td> </tr>
+<tr bgcolor="faf8f2">  <td>23/11/06 15:58:41</td>   <td>327381</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;Mod_6_BoatGroup.afterMethod()[pri:0, instance:com.marina.tests.Mod_6_BoatGroup@491cc5c9]">&lt;&lt;afterMethod</td> 
+<td>&nbsp;</td>  <td>main@1684015092</td>   <td></td> </tr>
+<tr bgcolor="faf8f2">  <td>23/11/06 15:58:44</td>   <td>331016</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;Mod_6_BoatGroup.beforeMethod()[pri:0, instance:com.marina.tests.Mod_6_BoatGroup@491cc5c9]">&gt;&gt;beforeMethod</td> 
+<td>&nbsp;</td>  <td>main@1684015092</td>   <td></td> </tr>
+<tr bgcolor="faf8f2">  <td>23/11/06 15:59:09</td>   <td>355993</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Mod_6_BoatGroup.verifyCopyFunctionBoatGroup_TC_1010()[pri:10, instance:com.marina.tests.Mod_6_BoatGroup@491cc5c9]">verifyCopyFunctionBoatGroup_TC_1010</td> 
+  <td>main@1684015092</td>   <td></td> </tr>
+<tr bgcolor="faf8f2">  <td>23/11/06 15:59:17</td>   <td>363127</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;Mod_6_BoatGroup.afterMethod()[pri:0, instance:com.marina.tests.Mod_6_BoatGroup@491cc5c9]">&lt;&lt;afterMethod</td> 
+<td>&nbsp;</td>  <td>main@1684015092</td>   <td></td> </tr>
+<tr bgcolor="faf8f2">  <td>23/11/06 15:59:20</td>   <td>366152</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;Mod_6_BoatGroup.beforeMethod()[pri:0, instance:com.marina.tests.Mod_6_BoatGroup@491cc5c9]">&gt;&gt;beforeMethod</td> 
+<td>&nbsp;</td>  <td>main@1684015092</td>   <td></td> </tr>
+<tr bgcolor="faf8f2">  <td>23/11/06 15:59:44</td>   <td>390387</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Mod_6_BoatGroup.deleteBoatGroups_TC_1011()[pri:11, instance:com.marina.tests.Mod_6_BoatGroup@491cc5c9]">deleteBoatGroups_TC_1011</td> 
+  <td>main@1684015092</td>   <td></td> </tr>
+<tr bgcolor="faf8f2">  <td>23/11/06 16:00:27</td>   <td>433231</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;Mod_6_BoatGroup.afterMethod()[pri:0, instance:com.marina.tests.Mod_6_BoatGroup@491cc5c9]">&lt;&lt;afterMethod</td> 
+<td>&nbsp;</td>  <td>main@1684015092</td>   <td></td> </tr>
+<tr bgcolor="a5f880">  <td>23/11/06 16:00:30</td>   <td>436419</td> <td title="&lt;&lt;TestBase.afterSuite()[pri:0, instance:com.marina.tests.Mod_6_BoatGroup@491cc5c9]">&lt;&lt;afterSuite</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1684015092</td>   <td></td> </tr>
 </table>
