--- a/test-output/old/Default suite/classes.html
+++ b/test-output/old/Default suite/classes.html
@@ -12,7 +12,58 @@
 <tr>
 <td>&nbsp;</td>
 <td>verifyBoatGroupPageOpens_TC_1001</td>
-<td>&nbsp;</td></tr>
+<td>regression,sanity,smoke </td>
+</tr>
+<tr>
+<td>&nbsp;</td>
+<td>addBoatMainPage_TC_1007</td>
+<td>regression,sanity,smoke </td>
+</tr>
+<tr>
+<td>&nbsp;</td>
+<td>editBoatGroupVerifyData_TC_1008</td>
+<td>regression,sanity,smoke </td>
+</tr>
+<tr>
+<td>&nbsp;</td>
+<td>addBoatGroupMandatoryFields_TC_1002</td>
+<td>regression,sanity,smoke </td>
+</tr>
+<tr>
+<td>&nbsp;</td>
+<td>generatingMultipleAddRequest_TC_1009</td>
+<td>regression,sanity,smoke </td>
+</tr>
+<tr>
+<td>&nbsp;</td>
+<td>deleteBoatGroups_TC_1011</td>
+<td>regression,sanity,smoke </td>
+</tr>
+<tr>
+<td>&nbsp;</td>
+<td>verifyCopyFunctionBoatGroup_TC_1010</td>
+<td>regression,sanity,smoke </td>
+</tr>
+<tr>
+<td>&nbsp;</td>
+<td>viewPageNewBoatAdd_TC_1006</td>
+<td>regression,sanity,smoke </td>
+</tr>
+<tr>
+<td>&nbsp;</td>
+<td>viewSavedDataBoatGroup_TC_1005</td>
+<td>regression,sanity,smoke </td>
+</tr>
+<tr>
+<td>&nbsp;</td>
+<td>addBoatGroupAllFields_TC_1003</td>
+<td>regression,sanity,smoke </td>
+</tr>
+<tr>
+<td>&nbsp;</td>
+<td>searchBoatGroup_TC_1004</td>
+<td>regression,sanity,smoke </td>
+</tr>
 <tr>
 <td align='center' colspan='3'>@BeforeClass</td>
 </tr>
@@ -26,6 +77,10 @@
 <tr>
 <td align='center' colspan='3'>@AfterMethod</td>
 </tr>
+<tr>
+<td>&nbsp;</td>
+<td>afterMethod</td>
+<td>&nbsp;</td></tr>
 <tr>
 <td align='center' colspan='3'>@AfterClass</td>
 </tr>
